All class implementations done - code working before challenge implementations.